--- a/EnlightenMobile/Views/ScopeView.xaml
+++ b/EnlightenMobile/Views/ScopeView.xaml
@@ -231,17 +231,26 @@
                             </FlexLayout>
 
                             <!-- note -->
-                            <StackLayout Grid.Row="0" Grid.Column="0" Orientation="Horizontal" HorizontalOptions="FillAndExpand" >
-                                <Label Text="Note"/>
+                            <StackLayout Grid.Row="0" Grid.Column="0"
+                                         Orientation="Horizontal"
+                                         HorizontalOptions="FillAndExpand"
+                                         VerticalOptions="FillAndExpand">
+                                <Label Text="Note" VerticalTextAlignment="Center"/>
                                 <Entry x:Name="entryNote"
                                        Text="{Binding note}" 
-                                       Placeholder="your text here" 
+                                       Placeholder="your text here"
+                                       VerticalOptions="FillAndExpand"
                                        HorizontalOptions="FillAndExpand" />
                             </StackLayout>
                         </StackLayout>
 
                         <!-- Status Bar -->
-                        <FlexLayout Grid.Row="4" Grid.Column="0" JustifyContent="SpaceBetween" BackgroundColor="#444" Padding="10">
+                        <FlexLayout Grid.Row="4" Grid.Column="0"
+                                    JustifyContent="SpaceBetween"
+                                    BackgroundColor="#444"
+                                    HeightRequest="30"
+                                    VerticalOptions="End"
+                                    Padding="10">
                             <Label Text="{Binding spectrumMax}" />
                             <Label Text="{Binding batteryState, StringFormat='Batt: {0}'}" TextColor="{Binding batteryColor}" />
                         </FlexLayout>
