--- a/EnlightenMobile/Views/ScopeView.xaml
+++ b/EnlightenMobile/Views/ScopeView.xaml
@@ -150,24 +150,6 @@
 
                         <StackLayout Grid.Row="3" Grid.Column="0" HorizontalOptions="FillAndExpand" Padding="20, 10, 20, 10">
 
-                            <!-- laser -->
-                            <FlexLayout JustifyContent="SpaceBetween">
-                                <Label  Text="Fire Laser" MinimumWidthRequest="75" />
-                                <Switch IsToggled="{Binding laserEnabled}" />
-                            </FlexLayout>
-
-                            <!-- dark -->
-                            <FlexLayout JustifyContent="SpaceBetween">
-                                <Label  Text="Dark" MinimumWidthRequest="75" />
-                                <Switch IsToggled="{Binding darkEnabled}" />
-                            </FlexLayout>
-
-                            <!-- alternating -->
-                            <FlexLayout JustifyContent="SpaceBetween">
-                                <Label  Text="Alternating" MinimumWidthRequest="75" />
-                                <Switch IsToggled="{Binding alternatingEnabled}" />
-                            </FlexLayout>    
-
                             <!-- integration time -->
                             <FlexLayout JustifyContent="SpaceBetween">
                                 <Label Text="Integration Time (ms)" />
@@ -199,6 +181,24 @@
                                        HorizontalTextAlignment="Center"
                                        WidthRequest="100"
                                        Keyboard="Numeric" />
+                            </FlexLayout>
+
+                            <!-- dark -->
+                            <FlexLayout JustifyContent="SpaceBetween">
+                                <Label  Text="Dark" MinimumWidthRequest="75" />
+                                <Switch IsToggled="{Binding darkEnabled}" />
+                            </FlexLayout>
+
+                            <!-- Raman mode -->
+                            <FlexLayout JustifyContent="SpaceBetween">
+                                <Label  Text="Raman Mode" MinimumWidthRequest="75" />
+                                <Switch x:Name="switchRamanMode" Toggled="ramanMode_Toggled" />
+                            </FlexLayout>    
+
+                            <!-- laser (if not in Raman Mode) -->
+                            <FlexLayout JustifyContent="SpaceBetween" IsVisible="{Binding authenticated}">
+                                <Label  Text="Fire Laser" MinimumWidthRequest="75" />
+                                <Switch IsToggled="{Binding laserEnabled}" IsEnabled="{Binding ramanModeDisabled}"/>
                             </FlexLayout>
 
                             <!-- x-axis -->
