--- a/EnlightenMobile/Views/ScopeView.xaml
+++ b/EnlightenMobile/Views/ScopeView.xaml
@@ -204,7 +204,7 @@
                             <!-- laser (if not in Raman Mode) -->
                             <FlexLayout JustifyContent="SpaceBetween" IsVisible="{Binding isAuthenticated}">
                                 <Label  Text="Fire Laser" MinimumWidthRequest="75" />
-                                <Switch IsToggled="{Binding laserEnabled}" IsEnabled="{Binding ramanModeDisabled}"/>
+                                <Switch IsToggled="{Binding laserEnabled}" IsEnabled="{Binding laserIsAvailable}"/>
                             </FlexLayout>
 
                             <!-- x-axis -->
