[0.4.5-pre] reset button seems to work, as does GPS

--- a/EnlightenMobile/Views/BluetoothView.xaml
+++ b/EnlightenMobile/Views/BluetoothView.xaml
@@ -19,9 +19,9 @@
             <Frame CornerRadius="10" BackgroundColor="#666" Padding="2">
                 <Frame CornerRadius="10" BackgroundColor="#444" Padding="2">
                     <StackLayout Orientation="Horizontal" Padding="2" HorizontalOptions="FillAndExpand">
-                        <Button x:Name="btnScan"    Text="Scan"    Clicked="btnScan_Clicked" />
+                        <Button x:Name="btnScan"    Text="Scan"    Clicked="btnScan_Clicked" IsEnabled="{Binding bluetoothEnabled}"/>
                         <Button x:Name="btnConnect" Text="{Binding buttonConnectText}" Clicked="btnConnect_Clicked" /> 
-                        <Button x:Name="btnReset"   Text="Reset"   Clicked="btnReset_Clicked" />
+                        <Button Text="Reset" Command="{Binding resetCmd}" />
                     </StackLayout>
                 </Frame>
             </Frame>
