[1.0.0] initial cut of customer release

--- a/EnlightenMobile/Views/LogView.xaml
+++ b/EnlightenMobile/Views/LogView.xaml
@@ -20,6 +20,9 @@
                 <StackLayout Orientation="Horizontal">
                     <Label Text="Verbose"/>
                     <Switch IsToggled="{Binding verbose}" />
+
+                    <Label Text="BLE"/>
+                    <Switch IsToggled="{Binding debugBLE}" />
                 </StackLayout>
             </StackLayout>
 
