--- a/EnlightenMobile/Views/BluetoothView.xaml
+++ b/EnlightenMobile/Views/BluetoothView.xaml
@@ -19,7 +19,9 @@
             <Frame CornerRadius="10" BackgroundColor="#666" Padding="2">
                 <Frame CornerRadius="10" BackgroundColor="#444" Padding="2">
                     <StackLayout Orientation="Horizontal" Padding="2" HorizontalOptions="FillAndExpand">
-                        <Button Text="Scan" Command="{Binding scanCmd}" IsEnabled="{Binding bluetoothEnabled}"/>
+                        <Button Text="Scan" Command="{Binding scanCmd}" IsEnabled="{Binding bluetoothEnabled}"
+                                TextColor="{Binding scanButtonTextColor}" 
+                                BackgroundColor="{Binding scanButtonBackgroundColor}" />
                         <Button Text="{Binding buttonConnectText}" Command="{Binding connectCmd}" IsEnabled="{Binding buttonConnectEnabled}" /> 
                     </StackLayout>
                 </Frame>
